# oxiplate-benchmark

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
benches/: templates.rs
crates/askama-latest/: Cargo.toml
crates/askama-latest/src/: lib.rs
crates/askama-latest/templates/: layout.html.askama  page.html.askama
crates/benchmark/: Cargo.toml
crates/benchmark/src/: lib.rs
crates/oxiplate-0-1/: Cargo.toml
crates/oxiplate-0-1/src/: lib.rs
crates/oxiplate-0-2/: Cargo.toml
crates/oxiplate-0-2/src/: lib.rs
crates/oxiplate-0-2/templates/: layout.html.oxip  page.html.oxip
crates/oxiplate-0-3/: Cargo.toml
crates/oxiplate-0-3/src/: lib.rs
crates/oxiplate-0-4/: Cargo.toml  oxiplate.toml
crates/oxiplate-0-4/src/: lib.rs
crates/oxiplate-0-5/: Cargo.toml
crates/oxiplate-0-5/src/: lib.rs
crates/oxiplate-0-6/: Cargo.toml
crates/oxiplate-0-6/src/: lib.rs
crates/oxiplate-0-6/templates/: layout.html.oxip
crates/oxiplate-0-7/: Cargo.toml
crates/oxiplate-0-7/src/: lib.rs
crates/oxiplate-0-7/templates/: page.html.oxip
crates/oxiplate-0-8/: Cargo.toml
crates/oxiplate-0-8/src/: lib.rs
crates/oxiplate-0-9/: Cargo.toml
crates/oxiplate-0-9/src/: lib.rs
src/: lib.rs
