[package]
name = "oxiplate-benchmark"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
criterion = "0.7.0"

# Library with trait all benchmarks use
benchmark = { version = "*", path = "crates/benchmark" }

# Oxiplate versions
oxiplate-0-1 = { version = "*", path = "crates/oxiplate-0-1", optional = true}
oxiplate-0-2 = { version = "*", path = "crates/oxiplate-0-2", optional = true }
oxiplate-0-3 = { version = "*", path = "crates/oxiplate-0-3", optional = true }
oxiplate-0-4 = { version = "*", path = "crates/oxiplate-0-4", optional = true }
oxiplate-0-5 = { version = "*", path = "crates/oxiplate-0-5", optional = true }
oxiplate-0-6 = { version = "*", path = "crates/oxiplate-0-6", optional = true }
oxiplate-0-7 = { version = "*", path = "crates/oxiplate-0-7", optional = true }
oxiplate-0-8 = { version = "*", path = "crates/oxiplate-0-8" }

# Other libraries
askama-latest = { version = "*", path = "crates/askama-latest", optional = true }

[[bench]]
name = "templates"
harness = false

[features]
default = ["recent", "other-libraries"]
all-packages = [
    "dep:oxiplate-0-1",
    "dep:oxiplate-0-2",
    "dep:oxiplate-0-3",
    "dep:oxiplate-0-4",
    "dep:oxiplate-0-5",
    "recent", 
    "other-libraries",
]
recent = [
    "dep:oxiplate-0-6",
    "dep:oxiplate-0-7",
]
other-libraries = ["dep:askama-latest"]
